--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   "homepage": "https://github.com/resin-io-modules/node-tar-utils#readme",
   "dependencies": {
     "@types/bluebird": "^3.5.3",
+    "@types/klaw": "^1.3.2",
+    "@types/mz": "0.0.31",
     "@types/node": "^7.0.18",
     "bluebird": "^3.5.0",
-    "tar-stream": "^1.5.2"
+    "event-stream": "^3.3.4",
+    "klaw": "^1.3.1",
+    "mz": "^2.6.0",
+    "tar-stream": "^1.5.4"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
