--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"outDir": "./build/",
-		"sourceMap": true,
-		"types": ["node"],
 		"target": "es6",
+		"outDir": "build",
 		"noImplicitAny": true,
-		"strictNullChecks": true
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"strictNullChecks": true,
+		"preserveConstEnums": true,
+		"pretty": true,
+		"removeComments": true,
+		"sourceMap": true
 	},
 	"include": [
-		"lib/",
-		"typings/"
+		"lib/**/*.ts"
 	],
 	"exclude": [
-		"node_modules",
-		"build",
-		"tests"
+		"node_modules"
 	]
 }
-
