--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "build/index.js",
   "types": "lib/index.ts",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "prepublish": "require-npm4-to-publish",
+    "prepublishOnly": "tsc && npm run test"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "gulp-typescript": "^3.1.6",
     "gulp-util": "^3.0.8",
     "mocha": "^3.3.0",
+    "require-npm4-to-publish": "^1.0.0",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2"
   }
