--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "lib/index.ts",
   "scripts": {
     "test": "gulp test",
+    "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{lib,tests}/**/*.ts\"",
     "prepublish": "require-npm4-to-publish",
     "prepublishOnly": "tsc && npm run test"
   },
@@ -21,8 +22,10 @@
   "homepage": "https://github.com/resin-io-modules/node-tar-utils#readme",
   "dependencies": {
     "@types/bluebird": "^3.5.3",
-    "@types/node": "^7.0.18",
-    "bluebird": "^3.5.0"
+    "@types/tar-stream": "1.6.0",
+    "@types/node": "^10.12.26",
+    "bluebird": "^3.5.0",
+    "tar-stream": "^1.6.2"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
@@ -35,7 +38,9 @@
     "gulp-typescript": "^3.1.6",
     "gulp-util": "^3.0.8",
     "mocha": "^3.3.0",
+    "prettier": "^1.15.3",
     "require-npm4-to-publish": "^1.0.0",
+    "resin-lint": "^2.0.1",
     "ts-node": "^3.0.4",
     "typescript": "^2.3.2"
   }
