--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
   },
   "homepage": "https://github.com/resin-io-modules/node-tar-utils#readme",
   "dependencies": {
-    "@types/bluebird": "^3.5.3",
-    "@types/tar-stream": "1.6.0",
-    "@types/node": "^10.12.26",
     "bluebird": "^3.5.0",
+    "lodash": "^4.17.11",
     "tar-stream": "^1.6.2"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.3",
     "@types/chai": "^3.5.2",
+    "@types/lodash": "4.14.123",
     "@types/mocha": "^2.2.41",
+    "@types/node": "^10.12.26",
+    "@types/tar-stream": "1.6.0",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
