--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "homepage": "https://github.com/resin-io-modules/node-tar-utils#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "lodash": "^4.17.15",
-    "tar-stream": "2.1.1"
+    "lodash": "^4.17.20",
+    "tar-stream": "^2.1.3"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.30",
+    "@types/bluebird": "^3.5.32",
     "@types/chai": "^3.5.2",
-    "@types/lodash": "^4.14.149",
+    "@types/lodash": "^4.14.159",
     "@types/mocha": "^2.2.41",
-    "@types/node": "^10.17.17",
+    "@types/node": "^10.17.28",
     "@types/tar-stream": "^2.1.0",
     "chai": "^3.5.0",
     "gulp": "^4.0.2",
@@ -44,6 +44,6 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^3.3.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   }
 }
