--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "build/index.d.ts",
   "scripts": {
     "test": "npm run lint && gulp test",
-    "lint": "resin-lint --typescript lib tests",
-    "prettify": "resin-lint --typescript --fix lib tests",
+    "lint": "balena-lint --typescript lib tests",
+    "prettify": "balena-lint --typescript --fix lib tests",
     "prepublish": "require-npm4-to-publish",
     "prepare": "tsc"
   },
@@ -26,6 +26,7 @@
     "tar-stream": "^2.1.3"
   },
   "devDependencies": {
+    "@balena/lint": "^4.1.1",
     "@types/bluebird": "^3.5.32",
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
@@ -40,7 +41,6 @@
     "gulp-util": "^3.0.8",
     "mocha": "^3.3.0",
     "require-npm4-to-publish": "^1.0.0",
-    "resin-lint": "^3.3.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.9.7"
   }
