--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "mocha": "^3.3.0",
     "require-npm4-to-publish": "^1.0.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=16.13.0"
   }
 }
